--- a/app/views/financedocument_currexg.html
+++ b/app/views/financedocument_currexg.html
@@ -35,31 +35,66 @@
 			</div>
 		</div>
 
+        <div class="form-group">
+            <label class="control-label col-sm-2" translate="Finance.SourceCurrency">Source Currency:</label>
+            <div class="col-sm-10">
+                <ui-select ng-model="SourceTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                    <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
+                    <ui-select-choices repeat="acur in AllCurrencies">
+                        <div ng-bind-html="acur.Name | highlight: $select.search"></div>
+                        <small>
+                            ID: {{acur.Currency}} <br />
+                            Name: <span ng-bind-html="''+acur.Name | highlight: $select.search"></span>
+                        </small>
+                    </ui-select-choices>
+                </ui-select>
+            </div>
+        </div>
+            
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptExgRate" translate="Finance.ExchangeRate">Exg. rate</label>
 			<div class="col-sm-10">
-				<input type="text" ng-readonly="isReadonly" id="iptExgRate" required class="form-control"
-						ng-model="DocumentObject.ExchangeRate"></input>
+                <div class="input-group">
+                    <input type="text" ng-readonly="isReadonly" id="iptExgRate" required class="form-control"
+                            ng-model="DocumentObject.ExchangeRate"></input>
+                    <span class="input-group-addon">
+                        <input type="checkbox" ng-readonly="isReadonly" ng-model="DocumentObject.ProposedExchangeRate">
+                    </span>		
+                </div>
+        	</div>
+		</div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" translate="Finance.TargetCurrency">Target Currency:</label>
+            <div class="col-sm-10">
+                <ui-select ng-model="TargetTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                    <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
+                    <ui-select-choices repeat="acur in AllCurrencies">
+                        <div ng-bind-html="acur.Name | highlight: $select.search"></div>
+                        <small>
+                            ID: {{acur.Currency}} <br />
+                            Name: <span ng-bind-html="''+acur.Name | highlight: $select.search"></span>
+                        </small>
+                    </ui-select-choices>
+                </ui-select>
+            </div>
+        </div>
+
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="iptExgRate" translate="Finance.ExchangeRate">Exg. rate</label>
+			<div class="col-sm-10">
+                <div class="input-group">
+                    <input type="text" ng-readonly="isReadonly" id="iptExgRate" required class="form-control"
+                            ng-model="DocumentObject.ExchangeRate2"></input>
+                    <span class="input-group-addon">
+                        <input type="checkbox" ng-readonly="isReadonly" ng-model="DocumentObject.ProposedExchangeRate2">
+                    </span>
+                </div>		
 			</div>
 		</div>
         
         <!-- Source part -->
         <div class="col-lg-6">
-            <div class="form-group">
-                <label class="control-label col-sm-2" translate="Finance.SourceCurrency">Source Currency:</label>
-                <div class="col-sm-10">
-                    <ui-select ng-model="SourceTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                        <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
-                        <ui-select-choices repeat="acur in AllCurrencies">
-                            <div ng-bind-html="acur.Name | highlight: $select.search"></div>
-                            <small>
-                                ID: {{acur.Currency}} <br />
-                                Name: <span ng-bind-html="''+acur.Name | highlight: $select.search"></span>
-                            </small>
-                        </ui-select-choices>
-                    </ui-select>
-                </div>
-            </div>
 
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptSAmt" translate="Finance.Amount">Source Amount:</label>
@@ -119,22 +154,6 @@
         
         <!-- Target part -->
         <div class="col-lg-6">
-            <div class="form-group">
-                <label class="control-label col-sm-2" translate="Finance.TargetCurrency">Target Currency:</label>
-                <div class="col-sm-10">
-                    <ui-select ng-model="TargetTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                        <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
-                        <ui-select-choices repeat="acur in AllCurrencies">
-                            <div ng-bind-html="acur.Name | highlight: $select.search"></div>
-                            <small>
-                                ID: {{acur.Currency}} <br />
-                                Name: <span ng-bind-html="''+acur.Name | highlight: $select.search"></span>
-                            </small>
-                        </ui-select-choices>
-                    </ui-select>
-                </div>
-            </div>
-
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptTAmt" translate="Finance.Amount">Amount:</label>
                 <div class="col-sm-10">
