--- a/app/views/finance/financedocumenthier.html
+++ b/app/views/finance/financedocumenthier.html
@@ -47,7 +47,7 @@
 		</div>
 		
 		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
-			<table st-table="docCollection" st-safe-src="arFinanceDocument" class="table table-striped table-hover">
+			<table st-table="docitemCollection" st-safe-src="safedocitemColl" class="table table-striped table-hover">
 				<thead>
 					<tr>
 						<th></th>
@@ -64,7 +64,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr ng-repeat="row in docCollection">
+					<tr ng-repeat="row in docitemCollection">
 						<td cs-select="row"></td>
 						<td>{{row.DocID}}</td>
 						<td>{{row.DocTypeObject.Name}}</td>
