--- a/app/views/modaldlg.html
+++ b/app/views/modaldlg.html
@@ -9,5 +9,5 @@
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
-    <button class="btn btn-warning" type="button" ng-class="cancel()">Cancel</button>
+    <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
 </div>
